Handle drivers (such as Oracle) which throw an exception when trying to retrieve         prepared statement parameter type information.